syntax = "proto3";

option go_package = "v1";
option java_package = "stackrox.generated";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "api/v1/common.proto";

package v1;

message DNRIntegration {
    string id                   = 1;
    repeated string cluster_ids = 2;
    string portal_url           = 3;
    string auth_token           = 4;
}

message GetDNRIntegrationsRequest {
    string cluster_id = 1;
}

message GetDNRIntegrationsResponse {
    repeated DNRIntegration results = 1;
}

service DNRIntegrationService {

    rpc GetDNRIntegration (ResourceByID) returns (DNRIntegration) {
        option (google.api.http) = {
            get: "/v1/dnrintegrations/{id}"
        };
    }

    rpc GetDNRIntegrations (GetDNRIntegrationsRequest) returns (GetDNRIntegrationsResponse) {
        option (google.api.http) = {
            get: "/v1/dnrintegrations"
        };
    }

    rpc PostDNRIntegration (DNRIntegration) returns (DNRIntegration) {
        option (google.api.http) = {
            post: "/v1/dnrintegrations"
            body: "*"
        };
    }

    rpc PutDNRIntegration (DNRIntegration) returns (DNRIntegration) {
        option (google.api.http) = {
            put: "/v1/dnrintegrations/{id}"
            body: "*"
        };
    }

    rpc DeleteDNRIntegration (ResourceByID) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/dnrintegrations/{id}"
        };
    }

    rpc TestDNRIntegration (DNRIntegration) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/dnrintegrations/test"
            body: "*"
        };
    }

}
